--- a/themes/countrycrafts/partials/nav/navigation.htm
+++ b/themes/countrycrafts/partials/nav/navigation.htm
@@ -4,7 +4,7 @@
         {% partial 'icons/search' %}
         {% partial 'icons/logo' %}
         <!--Tablet and Desktop Navigation-->
-        <nav class="flex flex-row justify-between w-8/12 mx-auto">
+        <nav class="hidden 2xl:flex flex-row justify-between w-8/12 mx-auto">
             <div class="w-2/12 flex justify-between">
                 <a class="hover:text-yellow-500" href="#">Home</a>
                 <a class="hover:text-yellow-500" href="#">Store</a>
@@ -12,6 +12,23 @@
             <div class="w-2/12 flex justify-between">
                 <a class="hover:text-yellow-500" href="#">Blog</a>
                 <a class="hover:text-yellow-500" href="#">About</a>
+            </div>
+        </nav>
+
+        <nav
+            x-data="{ open: false }"
+            @click.away="open = false"
+            class="2xl:hidden flex flex-row justify-end w-full relative"
+        >
+
+            <div class="flex flex-col">
+                {% partial 'icons/menu' %}
+                <div x-show="open" class="flex flex-col absolute -bottom-40 right-6 w-40 px-6 py-2 rounded-lg bg-white/20 backdrop-blur-sm">
+                    <a class="hover:text-yellow-500 text-md" href="#">Home</a>
+                    <a class="hover:text-yellow-500 text-md" href="#">Store</a>
+                    <a class="hover:text-yellow-500 text-md" href="#">Blog</a>
+                    <a class="hover:text-yellow-500 text-md" href="#">About</a>
+                </div>
             </div>
         </nav>
     </div>
