Finished Navigation. Starting Footer. Complete Layout after

--- a/themes/countrycrafts/partials/icons/menu.htm
+++ b/themes/countrycrafts/partials/icons/menu.htm
@@ -1,7 +1,29 @@
 <div
     @click="open = !open"
     class="bg-white/20 backdrop-blur-sm p-2 rounded-xl m-2 cursor-pointer flex flex-row-reverse place-items-center justify-between ml-3 mr-5">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-    </svg>
+    <template x-if="!open">
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 hover:fill-yellow-500 "
+        >
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+        </svg>
+    </template>
+
+    <template x-if="open">
+        <svg
+            xmlns="http://www.w4.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 hover:fill-yellow-500 "
+        >
+            <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+        </svg>
+    </template>
 </div>
