--- a/themes/countrycrafts/partials/nav/navigation.htm
+++ b/themes/countrycrafts/partials/nav/navigation.htm
@@ -4,12 +4,12 @@
         {% partial 'icons/search' %}
         {% partial 'icons/logo' %}
         <!--Tablet and Desktop Navigation-->
-        <nav class="hidden 2xl:flex flex-row justify-between w-8/12 mx-auto">
-            <div class="w-2/12 flex justify-between">
+        <nav class="hidden xl:flex flex-row justify-between w-11/12  2xl:w-8/12 mx-auto">
+            <div class="w-4/12 2xl:w-2/12 flex justify-between">
                 <a class="hover:text-yellow-500" href="#">Home</a>
                 <a class="hover:text-yellow-500" href="#">Store</a>
             </div>
-            <div class="w-2/12 flex justify-between">
+            <div class="w-4/12 2xl:w-2/12 flex justify-between">
                 <a class="hover:text-yellow-500" href="#">Blog</a>
                 <a class="hover:text-yellow-500" href="#">About</a>
             </div>
@@ -18,12 +18,15 @@
         <nav
             x-data="{ open: false }"
             @click.away="open = false"
-            class="2xl:hidden flex flex-row justify-end w-full relative"
+            class="xl:hidden flex flex-row justify-end w-full relative"
         >
 
             <div class="flex flex-col">
                 {% partial 'icons/menu' %}
-                <div x-show="open" class="flex flex-col absolute -bottom-40 right-6 w-40 px-6 py-2 rounded-lg bg-white/20 backdrop-blur-sm">
+                <div
+                    x-show="open"
+                    class="flex flex-col absolute -bottom-44 right-4 w-40 px-6 py-2 rounded-lg bg-black/50 backdrop-blur-sm"
+                >
                     <a class="hover:text-yellow-500 text-md" href="#">Home</a>
                     <a class="hover:text-yellow-500 text-md" href="#">Store</a>
                     <a class="hover:text-yellow-500 text-md" href="#">Blog</a>
@@ -32,5 +35,6 @@
             </div>
         </nav>
     </div>
+    <!-- Div for creating blur effect -->
     <div class="absolute inset-0 bg-black/20 backdrop-blur-md"></div>
 </section>
