--- a/themes/countrycrafts/assets/output.css
+++ b/themes/countrycrafts/assets/output.css
@@ -566,24 +566,8 @@ video {
   inset: 0px;
 }
 
-.-bottom-40 {
-  bottom: -10rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
 .-bottom-44 {
   bottom: -11rem;
-}
-
-.right-7 {
-  right: 1.75rem;
-}
-
-.right-8 {
-  right: 2rem;
 }
 
 .right-4 {
@@ -635,8 +619,20 @@ video {
   height: 24rem;
 }
 
-.w-2\/12 {
-  width: 16.666667%;
+.h-screen {
+  height: 100vh;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
 }
 
 .w-40 {
@@ -651,10 +647,6 @@ video {
   width: 2rem;
 }
 
-.w-8\/12 {
-  width: 66.666667%;
-}
-
 .w-auto {
   width: auto;
 }
@@ -663,16 +655,12 @@ video {
   width: 100%;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
+.w-9\/12 {
+  width: 75%;
 }
 
-.w-4\/12 {
-  width: 33.333333%;
-}
-
-.flex-1 {
-  flex: 1 1 0%;
+.flex-grow {
+  flex-grow: 1;
 }
 
 .cursor-pointer {
@@ -719,20 +707,30 @@ video {
   border-radius: 0.75rem;
 }
 
+.border-t-4 {
+  border-top-width: 4px;
+}
+
+.border-mom-yellow {
+  --tw-border-opacity: 1;
+  border-color: rgb(249 204 87 / var(--tw-border-opacity));
+}
+
 .bg-black\/20 {
   background-color: rgb(0 0 0 / 0.2);
 }
 
-.bg-white\/20 {
-  background-color: rgb(255 255 255 / 0.2);
-}
-
-.bg-white\/40 {
-  background-color: rgb(255 255 255 / 0.4);
-}
-
 .bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
+}
+
+.bg-mom-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(155 38 44 / var(--tw-bg-opacity));
+}
+
+.bg-white\/20 {
+  background-color: rgb(255 255 255 / 0.2);
 }
 
 .bg-home-hero-pattern {
@@ -769,6 +767,14 @@ video {
   padding-left: 0.5rem;
 }
 
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .font-architects {
   font-family: Architects Daughter, cursive;
 }
@@ -787,14 +793,14 @@ video {
   line-height: 1;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-black {
@@ -805,6 +811,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-mom-yellow {
+  --tw-text-opacity: 1;
+  color: rgb(249 204 87 / var(--tw-text-opacity));
 }
 
 .blur {
@@ -844,19 +855,11 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:flex {
-    display: flex;
-  }
-
-  .\32xl\:hidden {
-    display: none;
+  .\32xl\:w-2\/12 {
+    width: 16.666667%;
   }
 
   .\32xl\:w-8\/12 {
     width: 66.666667%;
-  }
-
-  .\32xl\:w-2\/12 {
-    width: 16.666667%;
   }
 }
