created basic card

--- a/themes/countrycrafts/layouts/default.htm
+++ b/themes/countrycrafts/layouts/default.htm
@@ -14,6 +14,7 @@ description = "Default layout"
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.8/dist/cdn.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body class="flex flex-col h-screen">
 
