created links and finished basic styling

--- a/themes/countrycrafts/partials/nav/navigation.htm
+++ b/themes/countrycrafts/partials/nav/navigation.htm
@@ -6,12 +6,12 @@
         <!--Tablet and Desktop Navigation-->
         <nav class="hidden xl:flex flex-row justify-between w-11/12  2xl:w-8/12 mx-auto">
             <div class="w-4/12 2xl:w-2/12 flex justify-between">
-                <a class="hover:text-yellow-500" href="#">Home</a>
-                <a class="hover:text-yellow-500" href="#">Store</a>
+                <a class="hover:text-yellow-500" href="/">Home</a>
+                <a class="hover:text-yellow-500" href="/store">Store</a>
             </div>
             <div class="w-4/12 2xl:w-2/12 flex justify-between">
-                <a class="hover:text-yellow-500" href="#">Blog</a>
-                <a class="hover:text-yellow-500" href="#">About</a>
+                <a class="hover:text-yellow-500" href="/blog">Blog</a>
+                <a class="hover:text-yellow-500" href="/about">About</a>
             </div>
         </nav>
 
@@ -27,10 +27,10 @@
                     x-show="open"
                     class="flex flex-col absolute -bottom-44 right-4 w-40 px-6 py-2 rounded-lg bg-black/50 backdrop-blur-sm"
                 >
-                    <a class="hover:text-yellow-500 text-md" href="#">Home</a>
-                    <a class="hover:text-yellow-500 text-md" href="#">Store</a>
-                    <a class="hover:text-yellow-500 text-md" href="#">Blog</a>
-                    <a class="hover:text-yellow-500 text-md" href="#">About</a>
+                    <a class="hover:text-yellow-500 text-md" href="/">Home</a>
+                    <a class="hover:text-yellow-500 text-md" href="/store">Store</a>
+                    <a class="hover:text-yellow-500 text-md" href="/blog">Blog</a>
+                    <a class="hover:text-yellow-500 text-md" href="/about">About</a>
                 </div>
             </div>
         </nav>
