--- a/themes/countrycrafts/assets/output.css
+++ b/themes/countrycrafts/assets/output.css
@@ -574,28 +574,12 @@ video {
   left: -2rem;
 }
 
-.-top-6 {
-  top: -1.5rem;
-}
-
-.bottom-20 {
-  bottom: 5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .-right-8 {
   right: -2rem;
+}
+
+.-top-6 {
+  top: -1.5rem;
 }
 
 .-top-8 {
@@ -604,6 +588,14 @@ video {
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.right-4 {
+  right: 1rem;
 }
 
 .z-10 {
@@ -687,6 +679,10 @@ video {
   height: 1rem;
 }
 
+.h-72 {
+  height: 18rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -699,8 +695,12 @@ video {
   height: 24rem;
 }
 
-.h-\[65em\] {
-  height: 65em;
+.h-\[40rem\] {
+  height: 40rem;
+}
+
+.h-\[52em\] {
+  height: 52em;
 }
 
 .h-auto {
@@ -711,68 +711,16 @@ video {
   height: 100vh;
 }
 
-.h-\[55em\] {
-  height: 55em;
-}
-
-.h-\[45em\] {
-  height: 45em;
-}
-
-.h-\[50em\] {
-  height: 50em;
-}
-
-.h-\[56em\] {
-  height: 56em;
-}
-
-.h-\[54em\] {
-  height: 54em;
-}
-
-.h-\[52em\] {
-  height: 52em;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-72 {
-  height: 18rem;
-}
-
-.h-\[96rem\] {
-  height: 96rem;
-}
-
-.h-\[68rem\] {
-  height: 68rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-\[48rem\] {
-  height: 48rem;
-}
-
-.h-\[35rem\] {
-  height: 35rem;
-}
-
 .w-10\/12 {
   width: 83.333333%;
 }
 
 .w-11\/12 {
   width: 91.666667%;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
 }
 
 .w-4\/12 {
@@ -791,12 +739,20 @@ video {
   width: 41.666667%;
 }
 
+.w-60 {
+  width: 15rem;
+}
+
 .w-72 {
   width: 18rem;
 }
 
 .w-8 {
   width: 2rem;
+}
+
+.w-9\/12 {
+  width: 75%;
 }
 
 .w-auto {
@@ -807,28 +763,12 @@ video {
   width: 100%;
 }
 
-.w-9\/12 {
-  width: 75%;
-}
-
 .w-3\/12 {
   width: 25%;
 }
 
-.w-2\/12 {
-  width: 16.666667%;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-52 {
-  width: 13rem;
+.w-8\/12 {
+  width: 66.666667%;
 }
 
 .flex-grow {
@@ -859,14 +799,6 @@ video {
   place-items: center;
 }
 
-.content-end {
-  align-content: flex-end;
-}
-
-.items-end {
-  align-items: flex-end;
-}
-
 .justify-end {
   justify-content: flex-end;
 }
@@ -879,8 +811,8 @@ video {
   justify-content: space-between;
 }
 
-.justify-items-center {
-  justify-items: center;
+.justify-around {
+  justify-content: space-around;
 }
 
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
@@ -899,18 +831,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.place-self-end {
-  place-self: end;
-}
-
-.self-end {
-  align-self: flex-end;
-}
-
-.justify-self-end {
-  justify-self: end;
 }
 
 .rounded-2xl {
@@ -955,6 +875,10 @@ video {
   background-color: rgb(0 0 0 / 0.5);
 }
 
+.bg-black\/85 {
+  background-color: rgb(0 0 0 / 0.85);
+}
+
 .bg-green-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
@@ -975,25 +899,23 @@ video {
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
+.bg-teal-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+}
+
 .bg-white\/20 {
   background-color: rgb(255 255 255 / 0.2);
 }
 
-.bg-black\/25 {
-  background-color: rgb(0 0 0 / 0.25);
-}
-
-.bg-black\/55 {
-  background-color: rgb(0 0 0 / 0.55);
-}
-
-.bg-black\/85 {
-  background-color: rgb(0 0 0 / 0.85);
-}
-
-.bg-teal-500 {
+.bg-indigo-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-home-hero-pattern {
@@ -1047,11 +969,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .pb-3 {
@@ -1114,6 +1031,11 @@ video {
   line-height: 1;
 }
 
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1127,11 +1049,6 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .text-black {
@@ -1160,11 +1077,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-black {
-  --tw-shadow-color: #000;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1180,10 +1092,6 @@ video {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.text-shadow-lg {
-  text-shadow: 0 8px 16px rgba(0, 0, 0, 0.65);
 }
 
 .text-shadow-sm {
