finished store page. Needs responsiveness

--- a/themes/countrycrafts/partials/foot/footer.htm
+++ b/themes/countrycrafts/partials/foot/footer.htm
@@ -36,8 +36,8 @@ function onStart()
             <div class="text-white font-architects flex flex-col bg-mom-teal md:w-96 rounded-xl place-items-center p-3 shadow-xl order-1 md:order-2">
                 <h5 class="text-2xl">Newsletter</h5>
                 <div class="flex flex-row justify-between space-x-6 py-3 w-full">
-                    <input class="rounded-lg h-auto pl-3 w-full" type="text" placeholder="Email">
-                    <button class="bg-green-600 py-2 px-4 rounded-xl">SUBMIT</button>
+                    <input class="border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="text" placeholder="Email">
+                    <button class="border-green-700 border-2 bg-green-500 py-2 px-4 rounded-xl">SUBMIT</button>
                 </div>
                 <p>
                     We promise not to spam you everyday and to only update you on new designs, events, and discounts.
