--- a/themes/countrycrafts/partials/cards/item-category-card.htm
+++ b/themes/countrycrafts/partials/cards/item-category-card.htm
@@ -1,15 +1,20 @@
-<article class="flex flex-row justify-end {{ bgColor }} rounded-2xl w-4/12 h-96 relative">
+<article class="flex flex-row justify-end {{ bgColor }} rounded-2xl w-4/12 h-64 relative">
     <!-- TODO: Make it so you can add up to four images -->
-    <div class="flex flex-row absolute -left-8 bottom-20 z-20">
-        <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl">
-        <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl">
-        <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl">
-        <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-80 rounded-2xl">
+    <div class="flex flex-row space-x-5 absolute -left-8 -top-10 z-20">
+        <img src="{{ imgs[0]|theme }}" alt="handcrafted" class="w-40 h-auto rounded-2xl">
+        <div class="flex flex-col space-y-5">
+            <img src="{{ imgs[1]|theme }}" alt="handcrafted" class="w-auto h-32 rounded-2xl">
+            <img src="{{ imgs[2]|theme }}" alt="handcrafted" class="w-auto h-32 rounded-2xl">
+        </div>
+        <img src="{{ imgs[3]|theme }}" alt="handcrafted" class="w-40 h-auto rounded-2xl">
     </div>
-    <div class="w-5/12 py-8 pr-8">
+    <div class="w-6/12 py-6 pr-6">
         <h1 class="text-5xl text-mom-yellow font-dancing">{{title}}</h1>
-        <p class="text-xl text-white font-architects mt-3">
+        <p class="text-xl text-white font-architects mt-3 h-auto">
             {{text}}
         </p>
+        <div class="flex flex-row justify-end">
+            <a class="text-3xl text-mom-yellow font-dancing" href="#">Purchase</a>
+        </div>
     </div>
 </article>
