--- a/themes/countrycrafts/partials/cards/commission-card.htm
+++ b/themes/countrycrafts/partials/cards/commission-card.htm
@@ -2,9 +2,9 @@
     <img src="{{ img|theme }}" alt="handcrafted" class="w-auto h-96 rounded-2xl absolute -left-8 bottom-6 z-20">
     <div class="flex flex-row justify-between w-8/12 py-8 pr-8">
         <div class="flex flex-col space-y-4 w-6/12 font-architects">
-            <input class="border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="email" placeholder="Email">
-            <input class="border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="text" placeholder="Subject">
-            <textarea class="border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" cols="30" rows="10" name="body" id="body" Placeholder="Type Your Message..."></textarea>
+            <input class="bg-slate-100 border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="email" placeholder="Email">
+            <input class="bg-slate-100 border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" type="text" placeholder="Subject">
+            <textarea class="bg-slate-100 border-yellow-500 border-2 rounded-lg h-auto pl-3 w-full" cols="30" rows="10" name="body" id="body" Placeholder="Type Your Message..."></textarea>
             <button class="text-white border-green-700 border-2 bg-green-500 py-2 px-4 rounded-xl">SUBMIT</button>
         </div>
         <div class="flex flex-col w-5/12">
