--- a/themes/countrycrafts/partials/cards/hori-card.htm
+++ b/themes/countrycrafts/partials/cards/hori-card.htm
@@ -19,7 +19,7 @@
                 {{text}}
             </p>
             {% if link %}
-                <a class="w-full text-right text-3xl text-mom-yellow font-dancing" href="{{link[1]}}">{{link[0]}}</a>
+                <a class="w-full text-right text-3xl text-mom-yellow font-dancing" href="blog/post/{{link[1]}}">{{link[0]}}</a>
             {% endif %}
         </div>
     </div>
