--- a/themes/countrycrafts/partials/cards/hori-card.htm
+++ b/themes/countrycrafts/partials/cards/hori-card.htm
@@ -1,10 +1,10 @@
 <article class="flex flex-col justify-between {{ bgColor }} rounded-2xl w-4/12 h-96 relative">
     {% if imgs %}
     <div class="flex flex-row space-x-5 absolute -left-8 -top-8 z-20">
-        <img src="{{ imgs[0]|theme }}" alt="handcrafted" class="w-40 h-auto rounded-2xl">
+        <img src="{{ imgs[0] }}" alt="handcrafted" class="w-40 h-auto rounded-2xl">
         <div class="flex flex-col space-y-5">
-            <img src="{{ imgs[1]|theme }}" alt="handcrafted" class="w-auto h-32 rounded-2xl">
-            <img src="{{ imgs[2]|theme }}" alt="handcrafted" class="w-auto h-32 rounded-2xl">
+            <img src="{{ imgs[1] }}" alt="handcrafted" class="w-auto h-32 rounded-2xl">
+            <img src="{{ imgs[2] }}" alt="handcrafted" class="w-auto h-32 rounded-2xl">
         </div>
         <img src="{{ imgs[3]|theme }}" alt="handcrafted" class="w-40 h-auto rounded-2xl">
     </div>
